<resources>
    <string name="app_name">Project</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>\
    <string name="register_here">No account yet? Register_here.</string>
    <string name="login">Login</string>
    <string name="projectlogo">projectlogo</string>
    <string name="have_account">Already have an account? Sign in!</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="invite">Type username of the member you want to invite</string>
    <string name="twitter">twitter</string>
    <string name="instagram">instagram</string>
    <string name="facebook">facebook</string>
    <string name="user_nickname_here">User nickname here</string>
    <string name="my_circle">My circle</string>
    <string name="avatar">avatar</string>
    <string name="sos">Emergency</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">Home</string>
    <string name="remember_me">Remember me?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="people">People</string>
    <string name="places">Places</string>
    <string name="leave">Leave</string>
    <string name="share_my_location">Share my location</string>
    <string name="share_my_battery_level">Share my battery level</string>
    <string name="share_my_speed">Share my speed</string>
    <string name="sign_out">Sign-out</string>
    <string name="profile">Profile</string>
    <string name="turn_on_sos">Turn on SOS</string>

</resources>
