<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/iv_Logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/projectlogo"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/inputUser"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/cv_Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="35dp"
        android:background="#DCFFFFFF"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:ignore="InvalidId"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/inputUser"
        android:layout_below="@id/inputUser"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="#DCFFFFFF"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000" />

    <CheckBox
        android:id="@+id/cb_rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputPass"
        android:layout_above="@id/btnLogin"
        android:layout_alignStart="@id/inputUser"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_above="@+id/btnReg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bt_background"
        android:text="@string/login"
        android:onClick="login_Click" />

    <TextView
        android:id="@+id/loginStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#ffff0000"
        android:layout_below="@+id/inputPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:background="#00FFFFFF"
        android:text="@string/register_here"
        android:onClick="register_Click"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/cv_Logo"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/twitter"
            android:contentDescription="@string/twitter"/>

        <ImageView
            android:id="@+id/iv_instagram"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram"/>

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook"/>
    </LinearLayout>


</RelativeLayout>
