<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:scrollbarThumbHorizontal="@drawable/gradient">

   <!-- <FrameLayout
        android:id="@+id/fl_profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            android:drawableStart="@drawable/ic_action_back"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:text="Profile"
            android:textColor="#000000"
            android:textSize="25sp" />

    </FrameLayout>-->
    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile"
        android:textFontWeight="@integer/google_play_services_version"
        android:textColor="#000000"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bt_background"
        android:scaleType="fitXY"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/users" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:text="nhoxtheanh"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Switch
        android:id="@+id/share_myLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:textSize="22sp"
        android:checked="true"
        android:onClick="share_locaction_change"
        android:text="@string/share_my_location" />

    <Switch
        android:id="@+id/share_myBattery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:textSize="22sp"
        android:checked="true"
        android:onClick="share_battery_change"
        android:text="@string/share_my_battery_level" />

    <Switch
        android:id="@+id/share_mySpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:textSize="22sp"
        android:checked="true"
        android:onClick="share_speed_change"
        android:text="@string/share_my_speed" />

    <Button
        android:id="@+id/btn_signOut"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bt_background"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:text="@string/sign_out"
        android:onClick="signOut_Click"/>

</LinearLayout>