<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_user"
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="79dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/avatar"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textNickname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/user_nickname_here"
            android:textSize="25sp"
            android:layout_gravity="bottom"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_mycircle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/fl_user"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        android:text="@string/my_circle" />


</RelativeLayout>